# dss

./: .gitignore  CMakeLists.txt  README  README.md  build.gradle  settings.gradle
cmake/: FindCriterion.cmake
dss-engine/: build.gradle
dss-engine/dss-engine-api/src/main/java/io/opendss/dss/engine/api/: EngineFactory.java  EngineMode.java  KvEngine.java  KvEngineSpecification.java  StreamEngine.java  StreamEngineSpecification.java
dss-engine/dss-engine-core/: build.gradle
dss-engine/dss-engine-core/src/main/java/io/opendss/dss/engine/: AbstractKvEngine.java  AbstractStreamEngine.java  NonPersistentKvEngine.java  NonPersistentStreamEngine.java  PersistentKvEngine.java  PersistentStreamEngine.java
dss-engine/dss-engine-exception/src/main/java/io/opendss/dss/engine/exceptions/: EngineException.java  EngineSpecificationException.java
engine/: hello.c
examples/: CMakeLists.txt  main.c
include/libengine/: hello.h
tests/: CMakeLists.txt  test.c
